--- a/src/index.css
+++ b/src/index.css
@@ -31,14 +31,42 @@ main {
 .instructions {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  margin-top: 0;
+  margin-top: 3%;
+  margin-bottom: auto;
   text-align: center;
+}
+
+.stats-div{
+  display: flex;
+  width: 95%;
+  justify-content: space-around;
+}
+
+.button-div{
+  display: flex;
+  width: 75%;
+  justify-content: space-around;
+}
+
+.stats-div p{
+  margin: 0;
+  color: #333;
+  font-weight: bolder;
+  font-size: 17px;
+  font-family: 'Inter', sans-serif;
+}
+
+.stats-div span{
+  font-size: 20px;
+  color: #222;
+  font-family: 'Inter', sans-serif;
 }
 
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  margin-top: auto;
   margin-bottom: 40px;
 }
 
@@ -55,6 +83,18 @@ main {
 
 .die-num {
   font-size: 2rem;
+}
+
+.reset-game{
+  height: 50px;
+  width: 150px;
+  border: 1px solid #5035FF;
+  border-radius: 6px;
+  background-color: whitesmoke;
+  color: #5035FF;
+  font-size: 1rem;
+  font-family: 'Karla', sans-serif;
+  cursor: pointer;
 }
 
 .roll-dice {
