--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,39 @@ main {
   cursor: pointer;
 }
 
+.flex{
+  width: 100%;
+  height: inherit;
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  align-items: center;
+  z-index: 1;
+}
+
+.four-die-flex{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+
+
+.six-die-flex{
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.dot{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #222;
+  z-index: 2;
+}
+
 .roll-dice {
   height: 50px;
   width: 150px;
