--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 main {
-  background-color: #F5F5F5;
+  background-color: #e0f5ae;
   height: 500px;
   max-width: 600px;
   border-radius: 5px;
@@ -26,6 +26,7 @@ main {
 .title {
   font-size: 40px;
   margin: 0;
+  color: #140436
 }
 
 .instructions {
@@ -149,3 +150,37 @@ main {
 .roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
+
+@media only screen and (max-width: 600px) {
+
+  main {
+    height: 600px;
+  }
+
+  .stats-div{
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .stats-div p{
+    font-weight: bold;
+    font-size: 12px;
+    padding-block: 3%;
+  }
+
+  .stats-div span {
+    font-size: 14px;
+    margin-right: auto;
+  }
+
+  .button-div{
+    width: 100%;
+  }
+
+  .dice-container{
+    margin-top: 20%;
+  }
+
+  
+  }
